--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/markgreenwood/esdb-builder/issues"
   },
-  "homepage": "https://github.com/markgreenwood/esdb-builder#readme"
+  "homepage": "https://github.com/markgreenwood/esdb-builder#readme",
+  "dependencies": {
+    "command-line-args": "^4.0.6",
+    "config": "^1.26.1",
+    "elasticsearch": "^13.2.0",
+    "js-yaml": "^3.9.0",
+    "ramda": "^0.24.1"
+  }
 }
